--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="E:/My Space/Web Dev/Dicey Section12/images/dice1.png">
+        <img class="img1" src="images/dice1.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="E:/My Space/Web Dev/Dicey Section12/images/dice1.png">
+        <img class="img2" src="images/dice1.png">
       </div>
 
     </div>
@@ -31,7 +31,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    JalajYadav
   </footer>
   <script src="E:\My Space\Web Dev\Dicey Section12\index.js"></script>
 </html>
