--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
   <footer>
     JalajYadav
   </footer>
-  <script src="E:\My Space\Web Dev\Dicey Section12\index.js"></script>
+  <script src="index.js"></script>
 </html>
